# Novmber

./: README.md  encrypter.py  pyproject.toml  requirements.txt
novmber/: encrypter.py  file_utils.py  main.py  novmber.py
server/: server.py
src/: decrypter.py  encrypter.py  file_scanner.py  file_utils.py  main.py  novmber.py  utils.py
