[tool.poetry]
name = "novmber"
version = "0.2.0"
description = ""
authors = ["Daniel Lima"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cryptography = "^43.0.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.8.0"
pylint = "^3.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
